fixed svg cutoff

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
+  overflow: visible;
 }
 
 h1{
